[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "calculator"

[[example]]
name = "kotlin"

[[bin]]
name = "main"
path = "src/main.rs"

[dev-dependencies]
regex = "*"
lazy_static = "*"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
proc-macro2 = "*"
quote = "*"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
logos = "0.12.0"
regex = "*"
lazy_static = "*"
